crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__palantir-java-format__input__palantir-11.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
public class Palantir11 {
  private void foo() {
    boolean answer =
      strategy.accept(
        Strategies.visitor(
          greaterThan -> true, // we don't need to validate greaterThan because it'll roll up to a good version
          exact -> !coordinates.contains(
            MavenCoordinate.of(productId, exact.getVersion())
          ),
          remove -> true,
          stay -> true,
          stayWithExceptions -> !coordinates.contains(
            MavenCoordinate.of(
              productId,
              stayWithExceptions.getDeploymentsExceptionVersion().getVersion()
            )
          )
        )
      );
  }
}
