crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__palantir-java-format__input__palantir-12.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
public class Palantir12 {
  @Override
  public void foo() {
    new DogWalker()
      .walk(
        DogBreed.FOX_TERRIER,
        new RoadWalker<Void>() {
          @Override
          public Void call(Dog dog) {
            routes.forEach(
              route -> route.getCoordinates()
                .forEach(
                  coordinate -> {
                    coordinate.getOtherDogs()
                      .forEach(
                        otherDog -> {
                          if (!dog.likes(otherDog)) {
                            badEncounters.computeIfAbsent(
                              coordinate,
                              _x -> new HashSet<>()
                            )
                              .add(dog)
                              .add(otherDog);
                          }
                        }
                      );
                  }
                )
            );
          }
        }
      );
  }
}
