crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__palantir-java-format__input__palantir-2.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class Palantir2 {
  void foo() {
    operations.put(
      FunctionDefinition.LOREM_IPSUM_DOLOR_,
      (func, helper) -> new Column(
        new GetArrayItem(
          helper.accessColumnFuncti(func.arguments().get(0)).expr(),
          helper.accessColumnFuncti(
            // Subtract 1 from the provided index to move from 1-indexed to 0-indexed.
            FooBarClassName1.of(
              func.arguments().get(1),
              FooBarClassName1.BinaryOperation.SUBTRACT,
              IntegerLiteral.of(1)
            )
          )
            .expr()
        )
      )
    );
  }
}
