crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__palantir-java-format__input__palantir-4.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class Palantir4 {
  void foo() {
    if (useAddedColumnsSetDesription) {
      resultSet =
        spark.sparkSetCreator()
          .resolve(
            initialSetResolver,
            new LoremIpsumLongClassNameWithDescription(
              initialSet,
              list,
              Optional.empty()
            )
          );
    }
  }
}
