crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__palantir-java-format__input__palantir-5.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class Palantir5 {
  void foo() {
    ConfigurationBuilder configuration =
      new ConfigurationBuilder()
        .addUrls(apiUrls)
        .filterInputsBy(name -> name != null && !name.contains("Immutable"));
  }

  void bar() {
    TopologicallySortedList<NodeId> sortedNodes =
      TopologicallySortedList.create(
        parentIdByNodeId.keySet(),
        nodeId -> StreamEx.of(parentIdByNodeId.get(nodeId)).toSet()
      );
  }
}
