crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__palantir-java-format__input__palantir-7.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class Palantir7 {
  void foo() {
    when(
      graphService.getPathFromRootToNode(any(GraphId.class), any(NodeId.class))
    )
      .thenAnswer(
        invocation -> invocation.getArguments().length == 2
          && invocation.getArguments()[1] != null
          ? ImmutableList.of(invocation.getArgument(1))
          : ImmutableList.of(NodeId.create())
      );
  }
}
