crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__palantir-java-format__input__palantir-8.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class Palantir8 {
  void foo() {
    assertThatServiceExceptionThrownBy(
      new Aggregation.Builder()
        .max(max)
        .aggregations(ImmutableMap.of("bountiful", bountifulAggregation))::build
    )
      .hasType(MY_ERROR_TYPE);
  }
}
