crates/jolt_java_fmt/tests/snapshots/corpus_fixtures__palantir-java-format__input__palantir-break-lambda-arg-no-chain.snap
---
source: crates/jolt_java_fmt/tests/corpus_fixtures.rs
expression: formatted
---
class PalantirLambdaBreakChain {
  void foo() {
    return hello.read(
        txn -> {
          doSomeWork();
          doSomeMoreWork();
        }
      );
  }
}
